--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -28,6 +28,10 @@
     justify-content: center;
     align-items: center;
 }
+h2{
+    text-align: center;
+    margin-top: 30px;
+}
 
 img {
     width: 300px;
