--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -18,7 +18,7 @@
 .png{
     position: absolute;
     padding-left: 20px;
-    margin-top: 110px;
+    margin-top: 130px;
     color: white;
     text-transform: capitalize;
 }
@@ -38,6 +38,7 @@ img {
 }
 .cardText{
     color: black;
+    margin: 15px;
 }
 .contenedorInfo{
     height: 450px;
@@ -46,14 +47,33 @@ img {
     display: flex;
     flex-direction: column;
     padding-left: 30px;
-    padding-top: 80px;
     justify-content: space-evenly;
     align-items: center;
-    width: 300px;
-    height: 370px;
     font-size: 1.2rem;
 }
-
+.icono{
+    width: 100px;
+}
+.icono2{
+    width: 70px;
+}
+.prediccion{
+    font-size: 1rem;
+}
+.padreIcon{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 30px;
+}
+.col{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-left: 20px;
+}
 @media screen and (max-width: 480px){
     .imagen{
         flex-direction: column;
@@ -64,5 +84,16 @@ img {
     .cardBody{
         padding-top: 20px;
         padding-left: 10px;
+    }
+    .padreIcon{
+        flex-direction: column;
+        margin-top: 10px;
+    }
+    h4{
+        margin-top: 20px;
+        font-size: 1rem;
+    }
+    .col{
+        margin-top: 20px;
     }
 }
